fix cart counter css on mobile

--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -199,7 +199,7 @@ body {
 
     .cart-count {
       position: absolute;
-      top: 3px;
+      top: 5px;
       left: 5px;
     }
   }
